Fix NavBar, add content text and overlay for visibility

--- a/client/src/components/features/HomeCarousel/HomeCarousel.module.scss
+++ b/client/src/components/features/HomeCarousel/HomeCarousel.module.scss
@@ -4,15 +4,37 @@
   margin-bottom: 48px;
 }
 .slide {
+  position: relative;
+  z-index: 0;
   &_image {
     object-fit: cover;
   }
 
+  .carousel_content {
+    position: relative;
+    z-index: 2;
+  }
   &_title {
     font-size: $base-size * 4;
   }
 
   &_subtitle {
     font-size: $base-size * 2;
+  }
+}
+
+.slide:after {
+  content: '';
+  background-color: black;
+  min-height: 110px;
+  width: 100%;
+  opacity: 0.3;
+  position: absolute;
+  top: 82%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 0;
+  @media all and (max-width: 992px) {
+    display: none;
   }
 }
